<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@android:color/transparent"
tools:context=".view.PdfShareDialogActivity">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0.6"
    android:background="#FF000000"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:background="@color/colorWhitePure"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg_btn_green_straight" />

    <TextView
        android:id="@+id/tvTitleDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/opensans_light"
        android:text="@string/tv_title_dialog"
        android:textColor="@color/colorWhitePure"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvNamePdf"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/opensans_regular"
        android:text="Pdf Name Here"
        android:textAlignment="center"
        android:textColor="@color/colorGreenLight"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/tvPageNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/opensans_light"
        android:text="@string/tv_page_num_dialog"
        android:textColor="@color/colorGrayJet"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="@+id/tvTitleDialog"
        app:layout_constraintTop_toBottomOf="@+id/tvNamePdf" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.67" />

    <EditText
        android:id="@+id/edtxtPage"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_green_outline"
        android:ems="10"
        android:fontFamily="@font/opensans_light"
        android:gravity="right"
        android:hint="1"
        android:inputType="number"
        android:maxLength="4"
        android:paddingStart="8dp"
        android:paddingTop="10dp"
        android:paddingEnd="8dp"
        android:paddingBottom="10dp"
        android:textAlignment="gravity"
        android:textColor="@color/colorBlack"
        android:textSize="16dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/tvPageNumber" />

    <TextView
        android:id="@+id/tvPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/opensans_light"
        android:text="@string/tv_page_dialog"
        android:textColor="@color/colorGreenLight"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/edtxtPage"
        app:layout_constraintEnd_toStartOf="@+id/edtxtPage"
        app:layout_constraintStart_toStartOf="@+id/guideline1" />

    <Button
        android:id="@+id/btnSharePdf"
        style="@style/button_text_appearance"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg_btn_green"
        android:fontFamily="@font/opensans_regular"
        android:text="@string/btn_share_dialog"
        android:textAllCaps="false"
        android:textColor="@color/colorWhitePure"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtxtPage" />

    <Button
        android:id="@+id/btnShareWP"
        style="@style/button_text_appearance"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/bg_green_outline"
        android:fontFamily="@font/opensans_regular"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/btn_shareWP_dialog"
        android:textAllCaps="false"
        android:textColor="@color/colorGreenLight"
        app:layout_constraintEnd_toStartOf="@+id/btnSharePdf"
        app:layout_constraintTop_toTopOf="@+id/btnSharePdf" />

</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>